<resources>
    <string name="app_name">Criminalntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_lable">Title</string>
    <string name="crime_details_lable">Details</string>
    <string name="crime_solved_lable">Solved</string>
    <string name="delete_crime_button">Delete crime</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choice Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="crime_solved">Crime solved</string>
    <string name="crime_not_solved">Crime not solved</string>

</resources>
